docs: improve description

--- a/docs/moodns.1
+++ b/docs/moodns.1
@@ -10,7 +10,7 @@
 \fBmoodns [OPTIONS]\fR
 .
 .SH "DESCRIPTION"
-\fBmoodns\fR is a pretty minimal multicast DNS server\.
+\fBmoodns\fR is a server implementation of multicast DNS\. Multicast DNS allows programs to discover hosts running on a local network by using familiar DNS programming interfaces without the need for a conventional DNS server\.
 .
 .SH "OPTIONS"
 \fB\-H, \-\-host\fR
