moodns: add support for forwarding of unicast queries
This is really just a hack to avoid having to install nss-mdns and avahi. Only
tested with the glibc and the bind resolvers.

--- a/docs/moodns.1
+++ b/docs/moodns.1
@@ -25,6 +25,12 @@
 \~\~\~\~\~\~ Listen on this address:port [default: 0\.0\.0\.0:5353]\.
 .
 .P
+\fB\-r, \-\-enable\-multicast\-forward\fR
+.
+.P
+\~\~\~\~\~\~ Enable forwarding of unicast requests to multicast (enable at your own risk)\.
+.
+.P
 \fB\-s, \-\-silent\fR
 .
 .P
