moodns: support listening on multiple addresses
This makes it possible to listen on :53 and :5353 at the same time in order to
make the "multicast forward" thing work with resolvers that don't allow setting
a name server port (e.g. glibc's) but also retain support for proper multicast
DNS.

--- a/docs/moodns.1
+++ b/docs/moodns.1
@@ -22,7 +22,7 @@
 \fB\-l, \-\-listen\fR
 .
 .P
-\~\~\~\~\~\~ Listen on this address:port [default: 0\.0\.0\.0:5353]\.
+\~\~\~\~\~\~ Listen on this address:port [default: 0\.0\.0\.0:5353]\. Multiple <address:port> comma\-separated tuples can be provided\.
 .
 .P
 \fB\-r, \-\-enable\-multicast\-forward\fR
